Small nit fixes on login flow

--- a/Pear/Controllers/Onboarding/Landing Screen/Landing Screen Pages/LandingScreenPage2ViewController.storyboard
+++ b/Pear/Controllers/Onboarding/Landing Screen/Landing Screen Pages/LandingScreenPage2ViewController.storyboard
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="J9S-Kb-9hC">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="J9S-Kb-9hC">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
-        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -14,11 +13,15 @@
         <scene sceneID="lEd-WC-G4d">
             <objects>
                 <viewController id="J9S-Kb-9hC" customClass="LandingScreenPage2ViewController" customModule="Pear" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="Wzb-dr-urx"/>
+                        <viewControllerLayoutGuide type="bottom" id="dad-2v-hPw"/>
+                    </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="IGf-xm-3eN">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="400"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="onboarding-page-1-image" translatesAutoresizingMaskIntoConstraints="NO" id="a6m-dr-QZx">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="onboarding-page-2-image" translatesAutoresizingMaskIntoConstraints="NO" id="a6m-dr-QZx">
                                 <rect key="frame" x="80" y="50" width="215" height="180"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="180" id="heb-mE-zU0"/>
@@ -39,19 +42,18 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="a6m-dr-QZx" firstAttribute="centerX" secondItem="6z2-r5-Eom" secondAttribute="centerX" id="1S3-IU-feW"/>
-                            <constraint firstItem="6z2-r5-Eom" firstAttribute="trailing" secondItem="dZ6-4J-Vnb" secondAttribute="trailing" constant="40" id="SeQ-mg-aez"/>
-                            <constraint firstItem="a6m-dr-QZx" firstAttribute="centerY" secondItem="6z2-r5-Eom" secondAttribute="centerY" constant="-60" id="VPe-nH-Dh1"/>
-                            <constraint firstItem="a6m-dr-QZx" firstAttribute="leading" secondItem="6z2-r5-Eom" secondAttribute="leading" constant="80" id="XVu-w5-UA3"/>
-                            <constraint firstItem="6z2-r5-Eom" firstAttribute="bottom" secondItem="dZ6-4J-Vnb" secondAttribute="bottom" constant="40" id="dV5-4r-ptK"/>
+                            <constraint firstItem="a6m-dr-QZx" firstAttribute="centerX" secondItem="IGf-xm-3eN" secondAttribute="centerX" id="1S3-IU-feW"/>
+                            <constraint firstAttribute="trailing" secondItem="dZ6-4J-Vnb" secondAttribute="trailing" constant="40" id="SeQ-mg-aez"/>
+                            <constraint firstItem="a6m-dr-QZx" firstAttribute="centerY" secondItem="IGf-xm-3eN" secondAttribute="centerY" constant="-60" id="VPe-nH-Dh1"/>
+                            <constraint firstItem="a6m-dr-QZx" firstAttribute="leading" secondItem="IGf-xm-3eN" secondAttribute="leading" constant="80" id="XVu-w5-UA3"/>
+                            <constraint firstItem="dad-2v-hPw" firstAttribute="top" secondItem="dZ6-4J-Vnb" secondAttribute="bottom" constant="40" id="dV5-4r-ptK"/>
                             <constraint firstItem="vVC-Yx-AjV" firstAttribute="width" secondItem="dZ6-4J-Vnb" secondAttribute="width" id="gjF-B4-W0i"/>
-                            <constraint firstItem="dZ6-4J-Vnb" firstAttribute="centerX" secondItem="6z2-r5-Eom" secondAttribute="centerX" id="hwL-Rg-H6b"/>
-                            <constraint firstItem="6z2-r5-Eom" firstAttribute="trailing" secondItem="a6m-dr-QZx" secondAttribute="trailing" constant="80" id="jVp-pJ-9br"/>
+                            <constraint firstItem="dZ6-4J-Vnb" firstAttribute="centerX" secondItem="IGf-xm-3eN" secondAttribute="centerX" id="hwL-Rg-H6b"/>
+                            <constraint firstAttribute="trailing" secondItem="a6m-dr-QZx" secondAttribute="trailing" constant="80" id="jVp-pJ-9br"/>
                             <constraint firstItem="vVC-Yx-AjV" firstAttribute="centerX" secondItem="dZ6-4J-Vnb" secondAttribute="centerX" id="k21-ko-9GK"/>
                             <constraint firstItem="dZ6-4J-Vnb" firstAttribute="top" secondItem="vVC-Yx-AjV" secondAttribute="bottom" constant="8" id="nHv-oW-gjm"/>
-                            <constraint firstItem="dZ6-4J-Vnb" firstAttribute="leading" secondItem="6z2-r5-Eom" secondAttribute="leading" constant="40" id="zuP-PN-LJj"/>
+                            <constraint firstItem="dZ6-4J-Vnb" firstAttribute="leading" secondItem="IGf-xm-3eN" secondAttribute="leading" constant="40" id="zuP-PN-LJj"/>
                         </constraints>
-                        <viewLayoutGuide key="safeArea" id="6z2-r5-Eom"/>
                     </view>
                     <size key="freeformSize" width="375" height="400"/>
                     <connections>
@@ -64,6 +66,6 @@
         </scene>
     </scenes>
     <resources>
-        <image name="onboarding-page-1-image" width="222" height="247"/>
+        <image name="onboarding-page-2-image" width="355.5" height="404"/>
     </resources>
 </document>
