--- a/Pear/Controllers/Onboarding/Landing Screen/Landing Screen Pages/LandingScreenPage1ViewController.storyboard
+++ b/Pear/Controllers/Onboarding/Landing Screen/Landing Screen Pages/LandingScreenPage1ViewController.storyboard
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="oCr-aK-WuR">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="oCr-aK-WuR">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
-        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -14,6 +13,10 @@
         <scene sceneID="ISt-g0-eI4">
             <objects>
                 <viewController id="oCr-aK-WuR" customClass="LandingScreenPage1ViewController" customModule="Pear" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="gTg-4F-hve"/>
+                        <viewControllerLayoutGuide type="bottom" id="pct-xB-Fil"/>
+                    </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="E9a-2q-htP">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="400"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -33,15 +36,14 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="xS5-tb-URl" firstAttribute="leading" secondItem="2fS-oP-FYH" secondAttribute="leading" constant="80" id="6DR-we-JOv"/>
-                            <constraint firstItem="xS5-tb-URl" firstAttribute="centerY" secondItem="2fS-oP-FYH" secondAttribute="centerY" constant="-60" id="909-xo-x8Q"/>
-                            <constraint firstItem="2fS-oP-FYH" firstAttribute="trailing" secondItem="xS5-tb-URl" secondAttribute="trailing" constant="80" id="CHJ-ba-RKH"/>
-                            <constraint firstItem="xS5-tb-URl" firstAttribute="centerX" secondItem="2fS-oP-FYH" secondAttribute="centerX" id="Wpe-IJ-J9N"/>
+                            <constraint firstItem="xS5-tb-URl" firstAttribute="leading" secondItem="E9a-2q-htP" secondAttribute="leading" constant="80" id="6DR-we-JOv"/>
+                            <constraint firstItem="xS5-tb-URl" firstAttribute="centerY" secondItem="E9a-2q-htP" secondAttribute="centerY" constant="-60" id="909-xo-x8Q"/>
+                            <constraint firstAttribute="trailing" secondItem="xS5-tb-URl" secondAttribute="trailing" constant="80" id="CHJ-ba-RKH"/>
+                            <constraint firstItem="xS5-tb-URl" firstAttribute="centerX" secondItem="E9a-2q-htP" secondAttribute="centerX" id="Wpe-IJ-J9N"/>
                             <constraint firstItem="h6v-sB-gv0" firstAttribute="top" secondItem="xS5-tb-URl" secondAttribute="bottom" constant="40" id="cN0-oB-l8g"/>
-                            <constraint firstItem="2fS-oP-FYH" firstAttribute="trailing" secondItem="h6v-sB-gv0" secondAttribute="trailing" constant="40" id="s26-kj-QOX"/>
-                            <constraint firstItem="h6v-sB-gv0" firstAttribute="leading" secondItem="2fS-oP-FYH" secondAttribute="leading" constant="40" id="ufn-9f-iRh"/>
+                            <constraint firstAttribute="trailing" secondItem="h6v-sB-gv0" secondAttribute="trailing" constant="40" id="s26-kj-QOX"/>
+                            <constraint firstItem="h6v-sB-gv0" firstAttribute="leading" secondItem="E9a-2q-htP" secondAttribute="leading" constant="40" id="ufn-9f-iRh"/>
                         </constraints>
-                        <viewLayoutGuide key="safeArea" id="2fS-oP-FYH"/>
                     </view>
                     <size key="freeformSize" width="375" height="400"/>
                     <connections>
