--- a/Pear/Controllers/Onboarding/Landing Screen/LandingScreenViewController.storyboard
+++ b/Pear/Controllers/Onboarding/Landing Screen/LandingScreenViewController.storyboard
@@ -19,7 +19,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" pagingEnabled="YES" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7bP-dS-bgj">
-                                <rect key="frame" x="0.0" y="0.0" width="375" height="507"/>
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="475"/>
                             </scrollView>
                             <pageControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" numberOfPages="4" translatesAutoresizingMaskIntoConstraints="NO" id="5aE-wz-PXH">
                                 <rect key="frame" x="160" y="478" width="55" height="37"/>
@@ -59,11 +59,11 @@
                             <constraint firstItem="BhD-Vv-GXK" firstAttribute="top" secondItem="s0e-kO-oji" secondAttribute="bottom" constant="12" id="G51-La-frm"/>
                             <constraint firstItem="PoT-HI-Elf" firstAttribute="trailing" secondItem="s0e-kO-oji" secondAttribute="trailing" constant="20" id="Hdi-IR-gO9"/>
                             <constraint firstItem="7bP-dS-bgj" firstAttribute="width" secondItem="im2-tZ-rGb" secondAttribute="width" id="LGY-Sv-Fe4"/>
+                            <constraint firstItem="s0e-kO-oji" firstAttribute="top" secondItem="7bP-dS-bgj" secondAttribute="bottom" constant="40" id="Oni-MP-HEy"/>
                             <constraint firstItem="PoT-HI-Elf" firstAttribute="bottom" secondItem="BhD-Vv-GXK" secondAttribute="bottom" constant="20" id="c7D-de-iv7"/>
                             <constraint firstItem="BhD-Vv-GXK" firstAttribute="leading" secondItem="PoT-HI-Elf" secondAttribute="leading" constant="20" id="fmI-fe-gxa"/>
                             <constraint firstItem="7bP-dS-bgj" firstAttribute="centerX" secondItem="PoT-HI-Elf" secondAttribute="centerX" id="ina-sy-lM7"/>
                             <constraint firstItem="5aE-wz-PXH" firstAttribute="centerX" secondItem="PoT-HI-Elf" secondAttribute="centerX" id="jUV-1W-Vdd"/>
-                            <constraint firstItem="s0e-kO-oji" firstAttribute="top" secondItem="7bP-dS-bgj" secondAttribute="bottom" constant="8" id="nXf-V3-zNG"/>
                             <constraint firstItem="PoT-HI-Elf" firstAttribute="trailing" secondItem="BhD-Vv-GXK" secondAttribute="trailing" constant="20" id="pKS-WT-LVI"/>
                             <constraint firstItem="s0e-kO-oji" firstAttribute="leading" secondItem="PoT-HI-Elf" secondAttribute="leading" constant="20" id="pfH-Tx-hKo"/>
                             <constraint firstItem="BhD-Vv-GXK" firstAttribute="leading" secondItem="PoT-HI-Elf" secondAttribute="leading" constant="20" id="z4a-MU-Xqo"/>
