--- a/Pear/Controllers/Onboarding/Landing Screen/Landing Screen Pages/LandingScreenPage3ViewController.storyboard
+++ b/Pear/Controllers/Onboarding/Landing Screen/Landing Screen Pages/LandingScreenPage3ViewController.storyboard
@@ -28,13 +28,16 @@
                                 </constraints>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Write profiles that lead to interesting, funny, and positive conversations - or more ;)" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sgU-9T-k6x">
-                                <rect key="frame" x="40" y="306" width="295" height="54"/>
+                                <rect key="frame" x="40" y="295" width="295" height="65"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="65" id="d55-pW-Qiu"/>
+                                </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Help your friend stand out!" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="i9a-fa-vad">
-                                <rect key="frame" x="40" y="272.5" width="295" height="25.5"/>
+                                <rect key="frame" x="40" y="261.5" width="295" height="25.5"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="21"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
